Got rid of all that blue. We're not Frotz, are we? Are we?

--- a/lower.html
+++ b/lower.html
@@ -2,10 +2,8 @@
 <head>
 <style>
 body {
-
-	background-color: #000077;
-	color: #FFFFFF;
-	font-size: 14pt;
+        font-family: "clean", sans-serif;
+	font-size: 10pt;
 }
 </style>
 </head>
