--- a/lower.html
+++ b/lower.html
@@ -1,15 +1,42 @@
 <html>
+<!--
+
+(The now inappropriately named) lower.html
+
+This appears twice on the Gnusto screen, once for each window.
+
+$Header: /cvs/gnusto/src/gnusto/content/Attic/lower.html,v 1.3 2003/03/28 20:40:58 marnanel Exp $
+
+Copyright (c) 2003 Thomas Thurman
+thomas@thurman.org.uk
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have be able to view the GNU General Public License at 
+http://www.gnu.org/copyleft/gpl.html ; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+
+-->
 <head>
-<style>
+<style type="text/css">
 body {
         font-family: "clean", sans-serif;
 	font-size: 10pt;
+	border: 0;
 }
+
 </style>
 </head>
 
 <body>
-<div id="tty">
-</div>
+<pre id="text"></pre>
 </body>
 </html>
