--- a/lower.html
+++ b/lower.html
@@ -5,7 +5,7 @@
 
 This appears twice on the Gnusto screen, once for each window.
 
-$Header: /cvs/gnusto/src/gnusto/content/Attic/lower.html,v 1.3 2003/03/28 20:40:58 marnanel Exp $
+$Header: /cvs/gnusto/src/gnusto/content/Attic/lower.html,v 1.4 2003/04/04 11:14:18 marnanel Exp $
 
 Copyright (c) 2003 Thomas Thurman
 thomas@thurman.org.uk
@@ -29,7 +29,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 <style type="text/css">
 body {
         font-family: "clean", sans-serif;
-	font-size: 10pt;
+	font-size: 15px;
 	border: 0;
 }
 
