--- a/output.html
+++ b/output.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<style>
-</style>
+<link rel="stylesheet" href="chrome://gnusto/skin/gnusto.css" type="text/css">
 <script>
 function camenesbounce_throw(what) {
 	var e = document.createEvent('Events');
