Now looks for CSS in the content directory. See bug 3620 for why.

--- a/output.html
+++ b/output.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="chrome://gnusto/skin/gnusto.css" type="text/css">
+<link rel="stylesheet" href="chrome://gnusto/content/gnusto.css" type="text/css">
 <script>
 function camenesbounce_throw(what) {
 	var e = document.createEvent('Events');
