dispatch(), rather than verb()

--- a/output.html
+++ b/output.html
@@ -16,7 +16,7 @@ function camenesbounce_throw(what) {
 
 <p>There'll be interesting stuff here later (and this screen will look a lot prettier), but for now, happy adventuring.</p>
 
-<p>For now, you can <a href="javascript://verb('open')" onclick="javascript:camenesbounce_throw(this);">load a game from the Story menu</a>. If you want to find a game, try <a href="javascript://verb('bafgenre 0')" onclick="javascript:camenesbounce_throw(this);">browsing by category</a>.</p>
+<p>For now, you can <a href="javascript://dispatch('open')" onclick="javascript:camenesbounce_throw(this);">load a game from the Story menu</a>. If you want to find a game, try <a href="javascript://dispatch('bafgenre 0')" onclick="javascript:camenesbounce_throw(this);">browsing by category</a>.</p>
 
 </body>
 </html>
