Bug 3655, intermediate checkin. Barbara and Bocardo are stacked.

--- a/output.html
+++ b/output.html
@@ -9,61 +9,22 @@ function camenesbounce_throw(what) {
 }
 </script>
 
-<style type="text/css">
-
-pre.bocardo {
-   background-color: transparent;
-   color: #ef8f00;
-   /* Orange, which isn't an ANSI colour
-   and so can't be displayed ordinarily.
-   So if you see it, something's up. */
-}
-
-/****************************************************************
-*
-* http://mozdev.org/bugs/show_bug.cgi?id=3657 has the original
-* list of Bocardo styles.
-*/
-
-.sb { font-weight: bold; }
-.si { font-style: italic; }
-.sm { font-family: monospace; }
-
-.ff { color: #000000; } /* Default foreground is black */
-.fb { color: #FFFFFF; } /* reverse video */
-.f2 { color: #000000; } /* 2 = black */
-.f3 { color: #FF0000; } /* 3 = red */
-.f4 { color: #00FF00; } /* 4 = green */
-.f5 { color: #FFFF00; } /* 5 = yellow */
-.f6 { color: #0000FF; } /* 6 = blue */
-.f7 { color: #FF00FF; } /* 7 = magenta */
-.f8 { color: #00FFFF; } /* 8 = cyan */
-.f9 { color: #FFFFFF; } /* 9 = white */
-
-.bb { background-color: #FFFFFF; } /* Default background is white */
-.bf { background-color: #000000; } /* reverse video */
-.b2 { background-color: #000000; } /* 2 = black */
-.b3 { background-color: #FF0000; } /* 3 = red */
-.b4 { background-color: #00FF00; } /* 4 = green */
-.b5 { background-color: #FFFF00; } /* 5 = yellow */
-.b6 { background-color: #0000FF; } /* 6 = blue */
-.b7 { background-color: #FF00FF; } /* 7 = magenta */
-.b8 { background-color: #00FFFF; } /* 8 = cyan */
-.b9 { background-color: #FFFFFF; } /* 9 = white */
-
-/**************************************************************/
-
-</style>
-
 </head>
 
 <body>
 
-<h1 id="welcome">Welcome to Gnusto</h1>
+Lorem ipsum dolor sit amet, consectetaur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
 
-<p>There'll be interesting stuff here later (and this screen will look a lot prettier), but for now, happy adventuring.</p>
+<b>Lorem Ipsum</b><br>
+An Interactive Dolor Sit Amet<br><br>
 
-<p>For now, you can <a href="javascript://dispatch('open')" onclick="javascript:camenesbounce_throw(this);">load a game from the Story menu</a>. If you want to find a game, try <a href="javascript://dispatch('bafgenre 0')" onclick="javascript:camenesbounce_throw(this);">browsing by category</a>.</p>
+consectetaur adipisicing elit,<br>
+sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
+
+Lorem ipsum dolor sit amet, consectetaur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+Lorem ipsum dolor sit amet, consectetaur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 
 </body>
 </html>
