--- a/tests/opcodes.html
+++ b/tests/opcodes.html
@@ -8,12 +8,13 @@
 	<script src="testrunner.js"></script>
 	<script src="../gnusto-engine.js"></script>
 	<script>
+FatalError = new Error();
 $(document).ready(function(){
 
 	test("Opcode storew", function() {
 		var arrays = {"test_array": 64};
 		var zcode = [5,0,0,1,0,0,0,81,0,0,0,64,0,64,0,0,0,0,48,57,48,55,50,55,0,64,0,41,0,0,0,0,0,0,0,0,0,0,0,0,0,80,0,80,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,73,78,70,65,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,225,83,64,0,12,34,232,63,12,34,225,91,64,1,0,232,127,2,225,99,64,0,12,34,232,63,12,34,232,127,3,225,107,64,0,0,232,127,64,225,147,0,4,12,34,232,63,12,34,232,127,64,225,155,0,5,0,232,127,6,232,127,64,225,163,0,0,12,34,232,63,12,34,232,127,7,232,127,64,225,171,0,0,0,186];
-		var engine = new GnustoEngine(console.log);
+		var engine = new GnustoEngine();
 		engine.loadStory(zcode);
 		engine.run();
 		same(engine.m_memory.slice(arrays.test_array, arrays.test_array + 16), [12,34,12,34,12,34,12,34,12,34,12,34,12,34,12,34]);
