--- a/tests/praxix.html
+++ b/tests/praxix.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<title>Gnusto unit tests with Praxix</title>
 	<script src="jquery.js"></script>
-	<script src="../src/class.js"></script>
+	<script src="../src/remedial.js"></script>
+	<script src="../src/class.js"></script>	
 	<script src="../src/iff.js"></script>
 	<script src="../src/quetzal.js"></script>
 	<script src="../gnusto-engine.js"></script>
